<resources>
    <string name="app_name">HappyPet</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="title_activity_pets">PetsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="prenume">Prenume</string>
    <string name="nume_de_familie">Nume de familie</string>
    <string name="numar_de_telefon">Număr de telefon</string>
    <string name="parola">Parolă</string>
    <string name="confirma_parola">Confirmă parola</string>
    <string name="creaza_cont">Crează cont</string>
    <string name="adresa_de_email">Adresă de email</string>
    <string name="poza_de_profil">Poza de profil</string>
    <string name="adauga_poza_de_profil">Adauga poza de profil</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>

    <!-- Cloud Styling -->
    <string name="cloud_styling_basic_map_id">26a66b031807a453</string>
    <string name="lite_styling_normal_mode">Normal</string>
    <string name="lite_styling_satellite_mode">Satellite</string>
    <string name="lite_styling_hybrid_mode">Hybrid</string>
    <string name="lite_styling_terrain_mode">Terrain</string>
    <string name="cloud_styling_label">Cloud Styling</string>
    <string name="cloud_styling_description">Demonstrates how to use a simple map using Cloud Styling.</string>

    <!-- Polyline/polygon styling -->
    <string name="polygon_demo_label">Polygons</string>
    <string name="polygon_demo_description">Demonstrates how to add Polygons to a map.</string>
    <string name="start_cap">Start cap</string>
    <string name="end_cap">End cap</string>
    <string name="joint_type">Joint Type</string>
    <string name="pattern">Pattern</string>
    <string name="cap_butt">Butt</string>
    <string name="cap_square">Square</string>
    <string name="cap_round">Round</string>
    <string name="cap_image">Image</string>
    <string name="joint_type_default">Default</string>
    <string name="joint_type_bevel">Bevel</string>
    <string name="joint_type_round">Round</string>
    <string name="pattern_solid">Solid</string>
    <string name="pattern_dotted">Dotted</string>
    <string name="pattern_dashed">Dashed</string>
    <string name="pattern_mixed">Mixed</string>
    <string name="polyline_demo_label">Polylines</string>
    <string name="polyline_demo_description">Demonstrates how to add and configure Polylines to a map.</string>
    <string name="polyline_selection">Select polyline</string>
    <string name="polyline_sydney">Sydney</string>
    <string name="polyline_melbourne">Melbourne</string>
    <string name="polyline_australia">Australia</string>
    <string name="polyline_world">World</string>
    <string name="argb">ARGB</string>
    <string name="cap_custom_chevron">Chevron</string>
    <string name="cap_custom_ook">Ook</string>
    <string name="joint_default">Default</string>
    <string name="joint_bevel">Bevel</string>
    <string name="joint_round">Round</string>
    <string name="solid" desc="Label of a toggle button indicating that the selected polyline should have solid color.">Solid color</string>
    <string name="gradient" desc="Label of a toggle button indicating that the selected polyline should have a color gradient.">Gradient color</string>
    <string name="textured" desc="Label of a checkbox indicating whether or not the selected polyline has texture.">Textured</string>
    <string name="point_sprite" desc="Label of a checkbox indicating whether or not the point sprite rendering technique is applied on textured polyline.">Point sprite</string>
    <string name="default_style" desc="Label of a radio group indicating whether or not default style is applied.">Default</string>
    <string name="geodesic">Geodesic</string>
    <string name="visible">Visible</string>

    <!-- Marker Collision -->
    <string name="marker_collision_label">Marker Collision</string>
    <string name="marker_collision_description">Demonstrates different supported marker collision behaviors.</string>
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="distribuie_profilul">Distribuie profilul</string>
    <string name="logare">Logare</string>

    <string name="facebook_app_id">523732319315186</string>
    <string name="facebook_client_token">efb99c95cb05d8bd819e49f50ed499e3</string>
    <string name="programeaza_te">Programeaza-te</string>
    <string name="tip_de_programare">Tip de programare</string>
    <string name="animal_de_companie">Animal de companie</string>
    <string name="selecteaza_locatia">Selecteaza locatia</string>
    <string name="selecteaza_doctor">Selecteaza doctor</string>
    <string name="string_selecteaza_doctor">Selecteaza doctor</string>
    <string name="locatie">Locatie</string>
    <string name="doctor">Doctor</string>
    <string name="date_contact_client">Date contact client</string>
    <string name="programare">Programare</string>
    <string name="nume_animal_de_companie">Nume animal de companie</string>
    <string name="data">Data</string>
    <string name="selecteaza_data_programarii">Selectează data programării</string>
    <string name="nu_poti_face_programari_in_weekend">Nu poți face programări în weekend!</string>
    <string name="enter_email">Email</string>
    <string name="last_name">Nume</string>
    <string name="first_name">Prenume</string>
    <string name="enter_password">Parola</string>
    <string name="confirm_password">Confirma parola</string>
    <string name="register">Inregistrare</string>
    <string name="schimba_fotografia">Adaugă fotografie</string>
    <string name="alege_o_optiune">Alege o opțiune</string>
    <string name="login">Logare</string>
    <string name="acasa">Acasa</string>
    <string name="animalutele_mele">Animăluțele mele</string>
    <string name="setari">Setari</string>
    <string name="deconectare">Deconectare</string>
    <string name="profilul_meu">Profilul meu</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="continua_cu_facebook">Continua cu Facebook</string>
    <string name="nu_ai_cont_inregistreaza_te">Nu ai cont? Înregistrează-te!</string>
    <string name="sau">sau</string>
    <string name="numele_anim_lu_ului">Numele animăluțului…</string>
    <string name="v_rsta_anim_lu_ului">Vârsta animăluțului…</string>
    <string name="programarile_mele">Programarile mele</string>
    <string name="adaug_animal">Adaugă animal</string>
    <string name="cere_o_programare">Cere o programare</string>
    <string name="doriti_o_programare">Doriti o programare?</string>
    <string name="share">Share</string>
    <string name="editeaza_profil">Editeaza profil</string>
    <string name="selectati_un_element_din_lista">Selectati un element din lista!</string>
    <string name="selectati_un_tip_de_programare">Selectati un tip de programare!</string>
    <string name="ore_disponibile">Ore disponibile</string>


</resources>