<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">
    <item
        android:id="@+id/nav_home"
        android:title="@string/acasa"
        android:icon="@drawable/ic_baseline_home_24" />
    <item
        android:id="@+id/profile"
        android:title="@string/profilul_meu"
        android:icon="@drawable/ic_baseline_account_circle_24"/>

    <item
        android:id="@+id/trails"
        android:title="@string/animalutele_mele"
        android:icon="@drawable/ic_baseline_pets_24"/>


    <item
        android:id="@+id/settings"
        android:title="@string/setari"
        android:icon="@drawable/ic_baseline_settings_24"/>

    <item
        android:id="@+id/logout"
        android:title="@string/deconectare"
        android:icon="@drawable/ic_baseline_login_24"/>


</menu>