<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="173dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Spinner
                android:id="@+id/select_location_dropdown"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/selecteaza_locatia"
                android:minHeight="48dp"
                android:prompt="@string/locatie"
                android:spinnerMode="dropdown" />

            <Spinner
                android:id="@+id/select_doctor_dropdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/string_selecteaza_doctor"
                android:minHeight="48dp"
                android:prompt="@string/doctor"
                android:spinnerMode="dropdown" />

            <Spinner
                android:id="@+id/select_appointment_type_dropdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/tip_de_programare"
                android:isScrollContainer="true"
                android:minHeight="48dp"
                android:prompt="@string/tip_de_programare"
                android:spinnerMode="dropdown" />

            <Spinner
                android:id="@+id/select_animal_dropdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/animal_de_companie"
                android:isScrollContainer="true"
                android:minHeight="48dp"
                android:prompt="@string/animal_de_companie"
                android:spinnerMode="dropdown" />

            <EditText
                android:id="@+id/select_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Data programare"
                android:clickable="false"
                android:cursorVisible="false"
                android:ems="10"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/selecteaza_data_programarii"
                android:inputType="date"
                android:longClickable="false"
                android:minHeight="48dp"
                android:textColorHint="#757575" />

            <LinearLayout
                android:id="@+id/available_intervals"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"></LinearLayout>

            <Button
                android:id="@+id/button_add_appointment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/programeaza_te" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>