<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="239dp"
        android:layout_height="67dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="68dp"
        android:text="@string/programare"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="italic"
        android:paddingTop="20dp"
        app:layout_constraintBottom_toTopOf="@+id/appointment_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/appointment_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginEnd="46dp"
        android:layout_marginBottom="41dp"
        android:text="@string/data"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/appointment_pet_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/appointment_doctor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginEnd="46dp"
        android:layout_marginBottom="32dp"
        android:text="@string/doctor"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/appointment_location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appointment_pet_name" />

    <TextView
        android:id="@+id/appointment_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginEnd="46dp"
        android:layout_marginBottom="48dp"
        android:text="@string/locatie"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/appointment_client_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appointment_doctor" />

    <TextView
        android:id="@+id/appointment_client_data"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="246dp"
        android:text="@string/date_contact_client"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appointment_location" />

    <TextView
        android:id="@+id/appointment_pet_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginEnd="46dp"
        android:layout_marginBottom="32dp"
        android:text="@string/nume_animal_de_companie"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/appointment_doctor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appointment_date" />

    <TextView
        android:id="@+id/appointment_type"
        android:layout_width="329dp"
        android:layout_height="wrap_content"
        android:text="@string/tip_de_programare"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appointment_client_data"
        app:layout_constraintVertical_bias="0.138" />
</androidx.constraintlayout.widget.ConstraintLayout>