<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-89dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/first_name_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:autofillHints="firstName"
                android:ems="10"
                android:hint="@string/nume_de_familie"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColorHint="#757575" />

            <EditText
                android:id="@+id/last_name_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:autofillHints="lastName"
                android:ems="10"
                android:hint="@string/prenume"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColorHint="#757575" />

            <EditText
                android:id="@+id/email_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:autofillHints="emailAddress"
                android:ems="10"
                android:hint="@string/adresa_de_email"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:textColorHint="#757575" />

            <EditText
                android:id="@+id/phone_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/numar_de_telefon"
                android:inputType="phone"
                android:minHeight="48dp"
                android:textColorHint="#757575" />

            <EditText
                android:id="@+id/password_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:autofillHints="password"
                android:ems="10"
                android:hint="@string/parola"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textColorHint="#757575" />

            <ProgressBar
                android:id="@+id/password_strength_bar_register"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="216dp"
                android:layout_height="16dp"
                android:layout_marginTop="8dp" />

            <EditText
                android:id="@+id/confirm_password_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/confirma_parola"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textColorHint="#757575" />

            <ImageView
                android:id="@+id/test"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:srcCompat="@tools:sample/avatars" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/profile_photo_register"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginTop="48dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginRight="32dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/poza_de_profil"
                    android:scaleType="centerInside"
                    tools:srcCompat="@color/cardview_dark_background" />

                <Button
                    android:id="@+id/select_profile_picture_register"
                    android:layout_width="181dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="36dp"
                    android:layout_marginLeft="36dp"
                    android:layout_marginTop="52dp"
                    android:text="@string/adauga_poza_de_profil" />

                <Button
                    android:id="@+id/camera_regsiter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Button" />
            </LinearLayout>

            <Button
                android:id="@+id/button_create_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/creaza_cont" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>